fix: link new respir pathoclopenclthread files

--- a/src/slg/CMakeLists.txt
+++ b/src/slg/CMakeLists.txt
@@ -661,6 +661,8 @@ set(SLG_CORE_SRCS
 	${LuxRays_SOURCE_DIR}/src/slg/engines/pathocl/pathocl.cpp
 	${LuxRays_SOURCE_DIR}/src/slg/engines/pathocl/pathoclrenderstate.cpp
 	${LuxRays_SOURCE_DIR}/src/slg/engines/pathocl/pathoclopenclthread.cpp
+	${LuxRays_SOURCE_DIR}/src/slg/engines/pathocl/pathoclrespiroclthread.cpp
+	${LuxRays_SOURCE_DIR}/src/slg/engines/pathocl/pathoclrespiroclthreadkernels.cpp
 	${LuxRays_SOURCE_DIR}/src/slg/engines/pathocl/pathoclnativethread.cpp
 	${LuxRays_SOURCE_DIR}/src/slg/engines/rtpathocl/rtpathocl.cpp
 	${LuxRays_SOURCE_DIR}/src/slg/engines/rtpathocl/rtpathoclthread.cpp
