--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-doxygen/luxrays.template
-doxygen/slg.template
-doxygen/luxcore.template
+doxygen/*.template$
 doxygen-luxrays.conf
 doxygen-slg.conf
 doxygen-luxcore.conf
