refactor: create new RespirPathOCLRenderEngine like other PathOCL-based render engines to remove bloat from the PathOCLBaseRenderEngine

--- a/src/slg/CMakeLists.txt
+++ b/src/slg/CMakeLists.txt
@@ -661,6 +661,7 @@ set(SLG_CORE_SRCS
 	${LuxRays_SOURCE_DIR}/src/slg/engines/pathocl/pathocl.cpp
 	${LuxRays_SOURCE_DIR}/src/slg/engines/pathocl/pathoclrenderstate.cpp
 	${LuxRays_SOURCE_DIR}/src/slg/engines/pathocl/pathoclopenclthread.cpp
+	${LuxRays_SOURCE_DIR}/src/slg/engines/respirpathocl/respirpathocl.cpp
 	${LuxRays_SOURCE_DIR}/src/slg/engines/respirpathocl/respirpathoclthread.cpp
 	${LuxRays_SOURCE_DIR}/src/slg/engines/respirpathocl/respirpathoclthreadkernels.cpp
 	${LuxRays_SOURCE_DIR}/src/slg/engines/pathocl/pathoclnativethread.cpp
