--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-doxygen/luxrays.template
-doxygen/slg.template
-doxygen/luxcore.template
+doxygen/*.template$
 doxygen-luxrays.conf
 doxygen-slg.conf
 doxygen-luxcore.conf
@@ -21,7 +19,6 @@ pyunittests/images/*.png
 pyunittests/referenceimages/*.png
 pyunittests/totaltestsdone.txt
 *~
-*CMakeFiles
 *CMakeCache.txt
 *Makefile
 *cmake_install.cmake
